--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -1,4 +1,15 @@
-.headerImages a{
-    width: 100%;
-    height: 100%;
+/* Styles headerImages */
+
+.headerImages{
+    display: flex;
+    width: 500px;
+    height: 250px;
+}
+
+.headerImages a,img{
+    display: flex;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
