--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -1,15 +1,54 @@
+a{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
 /* Styles headerImages */
 
 .headerImages{
     display: flex;
-    width: 500px;
+    width: 100%;
     height: 250px;
 }
 
-.headerImages a,img{
+/* Styles main */
+
+.main{
     display: flex;
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
+    margin-right: 10px;
+    width: 50%;
+    height: 100%;
+}
+
+/* Styles second */
+.second{
+    display: flex;
+    width: 25%;
+    height: 100%;
+}
+
+/* Styles third */
+.third{
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    width: 25%;
+}
+
+.third a{
+    height: 50%;
+}
+
+.third a:last-child{
+    padding-top: 10px;
 }
