added image, title and price to 'ProductItem'

--- a/src/Components/TrendItems/TrendItems.module.css
+++ b/src/Components/TrendItems/TrendItems.module.css
@@ -1,4 +1,12 @@
+/* style trendHeader */
 .trendHeader{
     display: flex;
     justify-content: space-between;
+}
+
+/* style trendBody */
+
+.trendBody{
+    display: flex;
+    flex-direction: row;
 }
