--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -1,4 +1,11 @@
-a{
+/* Styles headerImages */
+.headerImages{
+    display: flex;
+    width: 100%;
+    height: 250px;
+}
+
+.headerImages a{
     display: flex;
     position: relative;
     width: 100%;
@@ -8,19 +15,11 @@ a{
     max-height: 100%;
 }
 
-img{
+.headerImages img{
     width: 100%;
     height: 100%;
     max-width: 100%;
     max-height: 100%;
-}
-
-/* Styles headerImages */
-
-.headerImages{
-    display: flex;
-    width: 100%;
-    height: 250px;
 }
 
 p{
