--- a/src/Components/TrendItems/TrendItems.module.css
+++ b/src/Components/TrendItems/TrendItems.module.css
@@ -1,12 +1,19 @@
-/* style trendHeader */
+/* trendHeader */
 .trendHeader{
     display: flex;
     justify-content: space-between;
 }
 
-/* style trendBody */
-
-.trendBody{
+/* trendItems */
+.trendItems{
+    --x-axis : -50%;
     display: flex;
     flex-direction: row;
+    width: 200%;
+    transform: translateX(var(--x-axis));
+}
+
+/* trendBody */
+.trendBody{
+    overflow: hidden;
 }
