now 'Separator' has text and an image

--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -22,7 +22,7 @@
     max-height: 100%;
 }
 
-p{
+.headerImages p{
     display: flex;
     position: absolute;
     backdrop-filter: brightness(60%);
