--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -1,17 +1,45 @@
+/* productTitle */
+.productTitle{
+    display: flex;
+    justify-content: center;
+}
+
 /* productBody */
 .productBody{
     display: flex;
     justify-content: space-between;
-    height: 500px;
+    height: 88vh;
 }
 
-.productBody img{
+/* productImages */
+.productImages{
+    display: flex;
+    flex-direction: column;
     width: 55%;
+}
+
+.productImages img{
+    height: 80%;
+    width: 100%;
+}
+/* imageSelector */
+.imageSelector{
+    display: flex;
+    width: 100%;
+    height: 20%;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.imageSelector img{
+    width: 100px;
+    margin: 0 10px;
 }
 
 /* productDetails */
 .productDetails{
     width: 40%;
+    margin-top: 10%;
 }
 
 /* productPrice */
@@ -53,3 +81,7 @@
     background-color: rgb(225, 0, 0);
 }
 
+/* trend */
+.trend{
+    margin: 10px 0 20px 0;
+}
