--- a/src/Pages/Categories/Categories.module.css
+++ b/src/Pages/Categories/Categories.module.css
@@ -26,3 +26,10 @@
     cursor: pointer;
     background-color: rgb(225, 225, 225);
 }
+
+/* categoriesProducts */
+.categoriesProducts{
+    display: grid;
+    grid-template-columns: repeat(3, 300px);
+    gap: 10px;
+}
