--- a/src/Components/ProductItem/ProductItem.module.css
+++ b/src/Components/ProductItem/ProductItem.module.css
@@ -3,7 +3,6 @@
 .item{
     display: flex;
     flex-direction: column;
-    width: 25%;
     border: 1px solid rgba(0, 0, 0, 0.233);
     border-radius: 10px;
     overflow: hidden;
@@ -25,6 +24,7 @@
 .item:hover{
     border: 1px solid black;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 /* Styles itemBody */
