--- a/src/Pages/Categories/Categories.module.css
+++ b/src/Pages/Categories/Categories.module.css
@@ -1,7 +1,3 @@
-/* categoriesBody */
-.categoriesBody{
-
-}
 
 /* categoriesTitle */
 .categoriesTitle{
@@ -13,6 +9,7 @@
 .categoriesButtons{
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 25px;
 }
 
 .categoriesButtons button{
@@ -30,6 +27,8 @@
 /* categoriesProducts */
 .categoriesProducts{
     display: grid;
-    grid-template-columns: repeat(3, 300px);
-    gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 20px;
+    row-gap: 10px;
+    margin-bottom: 25px;
 }
