--- a/src/Components/TrendItems/TrendItems.module.css
+++ b/src/Components/TrendItems/TrendItems.module.css
@@ -11,6 +11,7 @@
     flex-direction: row;
     width: 200%;
     transform: translateX(var(--x-axis));
+    margin-bottom: 5px;
 }
 
 /* trendBody */
