--- a/src/Components/TrendItems/TrendItems.module.css
+++ b/src/Components/TrendItems/TrendItems.module.css
@@ -4,6 +4,18 @@
     justify-content: space-between;
 }
 
+.trendHeader button{
+    margin-right: 5px;
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+}
+
+.trendHeader button:hover{
+    cursor: pointer;
+    background-color: rgb(225, 225, 225);
+}
+
 /* trendItems */
 .trendItems{
     --x-axis : -50%;
