--- a/src/Components/ProductItem/ProductItem.module.css
+++ b/src/Components/ProductItem/ProductItem.module.css
@@ -3,9 +3,11 @@
 .item{
     display: flex;
     flex-direction: column;
+    color: black;
     border: 1px solid rgba(0, 0, 0, 0.233);
-    overflow: hidden;
     height: 300px;
+    text-decoration: none;
+    overflow: hidden;
 }
 
 
