--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -1,18 +1,9 @@
 /* Styles headerImages */
 .headerImages{
-    display: flex;
-    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    grid-gap: 10px;
     height: 100%;
-}
-
-.headerImages a{
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .headerImages img{
@@ -21,9 +12,8 @@
     max-width: 100%;
     max-height: 100%;
 }
-
 .headerImages p{
-    display: flex;
+    display: grid;
     position: absolute;
     backdrop-filter: brightness(60%);
     width: 100%;
@@ -32,7 +22,6 @@
     max-height: 100%;
     margin: 0;
 }
-
 .headerImages h3{
     margin: 0;
     position: absolute;
@@ -43,34 +32,40 @@
 
 }
 
+.headerImages a{
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+
+
+
 /* Styles main */
 
-.main{
+/*.main{
     display: flex;
     margin-right: 10px;
     width: 50%;
     height: 100%;
-}
+}*/
 
 /* Styles second */
 .second{
-    display: flex;
-    width: 25%;
-    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
 }
 
 /* Styles third */
 .third{
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-    width: 25%;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 10px;
 }
 
-.third a{
-    height: 50%;
-}
 
-.third a:last-child{
-    padding-top: 10px;
-}
