--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -1,10 +1,12 @@
 /* footer */
-.footer{
+footer{
     display: flex;
     flex-direction: column;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     background-color: black;
-    height: 100px;
-    margin-top: auto;
+    height: 105px;
 }
 
 /* footerBody */
@@ -12,7 +14,7 @@
     display: flex;
     margin:auto;
     width: 20%;
-    justify-content: space-between;
+    justify-content:space-evenly;
 }
 
 .footerBody a{
@@ -24,7 +26,15 @@
 
 /* footerLogo */
 .footerLogo{
+    display: flex;
+    justify-content: center;
+    height: 70%;
+}
+
+/* logo */
+.logo{
+    justify-content: center;
     color: white;
     text-align: center;
-    height: 70%;
+    text-decoration: none;
 }
