--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
-  display: flex;
-  flex-direction: column;
+  position: absolute;
   min-height: 100vh;
+  width: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
