--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -12,6 +12,7 @@
 
 /* cartContent */
 .cartContent{
+    position: relative;
     float: right;
     width: 30%;
     height: 100%;
@@ -37,4 +38,41 @@
 
 .close:hover{
     cursor: pointer;
+}
+
+/* cartBody */
+
+/* cartFooter */
+.cartFooter{
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 94%;
+    overflow: none;
+    padding: 15px;
+    border-top: 1px solid rgba(0, 0, 0, 0.233);
+}
+
+.cartFooter button{
+    width: 150px;
+    height: 50px;
+    color: black;
+    background-color: white;
+    border: 3px solid black;
+}
+
+.cartFooter button:hover{
+    cursor: pointer;
+}
+
+/* subtotal */
+.subtotal h3{
+    margin: 0;
+}
+
+.subtotal h4{
+    margin-top: 10px;
+    margin-bottom: 0;
 }
