--- a/src/Components/ProductItem/ProductItem.module.css
+++ b/src/Components/ProductItem/ProductItem.module.css
@@ -4,14 +4,14 @@
     display: flex;
     flex-direction: column;
     color: black;
-    border: 1px solid rgba(0, 0, 0, 0.233);
+    border: var(--border-gray);
     height: 300px;
     text-decoration: none;
     overflow: hidden;
 }
 
 .item:hover{
-    border: 1px solid black;
+    border: var(--border-black);
     cursor: pointer;
 }
 
@@ -19,7 +19,7 @@
 .itemImage{
     display: flex;
     height: 210px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
+    border-bottom: var(--border-gray);
 }
 
 .itemImage img{
