--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -54,7 +54,7 @@
     bottom: 0;
     width: 481px;
     padding: 10px;
-    border-top: 1px solid rgba(0, 0, 0, 0.233);
+    border-top: var(--border-gray);
 }
 
 .cartFooter button{
