--- a/src/Components/ImageSelector/ImageSelector.module.css
+++ b/src/Components/ImageSelector/ImageSelector.module.css
@@ -5,9 +5,15 @@
     width: 55%;
 }
 
-.productImages img{
+/* image */
+.image{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    box-sizing: border-box;
     height: 80%;
     width: 100%;
+    padding: 100px 100px 50px 100px;
 }
 
 /* imageSelector */
@@ -16,11 +22,11 @@
     width: 100%;
     height: 20%;
     justify-content: center;
-    margin-top: 15px;
 }
 
 .imageSelector img{
+    cursor: pointer;
     width: 100px;
     margin: 0 10px;
-    cursor: pointer;
+    padding: 15px;
 }
