--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -8,7 +8,7 @@
 .productBody{
     display: flex;
     justify-content: space-between;
-    height: 88vh;
+    height: 80vh;
 }
 
 /* detailsSection */
@@ -16,6 +16,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
+    margin: 50px 0;
 }
 
 /* productDetails */
@@ -34,5 +35,5 @@
 
 /* trend */
 .trend{
-    margin: 10px 0 20px 0;
+    margin: 10px 0 70px 0;
 }
