--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -1,7 +1,8 @@
 /* Styles headerImages */
 .headerImages{
     display: grid;
-    grid-template-columns: repeat(2, 2fr);
+    grid-template-columns: repeat(4, 2fr);
+    grid-template-rows: 1fr 1fr;
     grid-gap: 10px;
     height: 100%;
 }
@@ -34,18 +35,43 @@
     max-height: 100%;
 }
 
-/* Styles second */
-.second{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
+/* furniture */
+.furniture{
+    grid-column: 1/3;
+    grid-row: 1/3;
 }
 
-/* Styles third */
-.third{
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 10px;
+/* clothes */
+.clothes{
+    grid-row: 1/3;
+}
+
+/* peripherals */
+.peripherals{
+    grid-column: 4;
+    grid-row: 1;
 }
 
 
+/* electronics */
+.electronics{
+    grid-column: 4;
+    grid-row: 2;
+}
+
+@media (max-width: 1000px){
+    /* headerImages */
+    .headerImages{
+        display: grid;
+        grid-template-columns: repeat(2, 250px);
+        grid-template-rows: repeat(2, 1fr);
+        grid-gap: 10px;
+    }
+    /* furniture clothes peripherals electronics */
+    .furniture, .clothes, .peripherals, .electronics{
+        grid-column: auto;
+        grid-row: auto;
+    }
+
+    
+}
