--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -1,12 +1,16 @@
+nav{
+    position: sticky;
+    z-index: 1;
+    top: 0;
+
+}
+
 /* navContainer */
 .navContainer{
     display: flex;
     justify-content: space-between;
     margin: auto;
     width: 1000px;
-    z-index: 1;
-    position: sticky;
-    top: 0;
     background-color: white;
 }
 
