--- a/src/Components/HomeHeader/HomeHeader.module.css
+++ b/src/Components/HomeHeader/HomeHeader.module.css
@@ -19,7 +19,7 @@
     margin: 0;
     position: absolute;
     color: white;
-    font-size: 1.5vw;
+    font-size: 30px;
     bottom: 5px;
     left: 10px;
 
@@ -63,6 +63,7 @@
     /* headerImages */
     .headerImages{
         display: grid;
+        justify-content: center;
         grid-template-columns: repeat(2, 250px);
         grid-template-rows: repeat(2, 1fr);
         grid-gap: 10px;
