--- a/src/Components/Separator/Separator.module.css
+++ b/src/Components/Separator/Separator.module.css
@@ -1,34 +1,39 @@
 /* separatorBody */
 .separatorBody{
     display: flex;
-    height: 100%;
+    height: 250px;
     margin: 25px 0;
 }
 
-.separatorBody img{
-    width: 50%;
-}
 /* bodyReverse */
 .bodyReverse{
     display: flex;
     flex-direction: row-reverse;
-    height: 100%;
+    height: 250px;
     margin: 25px 0;
 }
 
-.bodyReverse img{
+/* separatorImage */
+.separatorImage{
     width: 50%;
 }
+
+.separatorImage img{
+    width: 100%;
+    height: 100%;
+}
+
 /* textContainer */
 .textContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 50%;
-    position: relative;
 }
 
 /* textBody */
 .textBody{
-    padding: 8% 15%;
-    position: absolute;
+    width: 60%;
 }
 
 .textBody h2{
