--- a/src/Pages/Categories/Categories.module.css
+++ b/src/Pages/Categories/Categories.module.css
@@ -1,3 +1,11 @@
+/* categoriesBody */
+.categoriesBody{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 /* categoriesTitle */
 .categoriesTitle{
@@ -9,6 +17,7 @@
 .categoriesButtons{
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
     margin-bottom: 25px;
 }
 
@@ -46,4 +55,12 @@
     column-gap: 20px;
     row-gap: 10px;
     margin-bottom: 25px;
+}
+
+@media (max-width: 1000px){
+    /* categoriesProducts */
+    .categoriesProducts{
+        grid-template-columns: repeat(2, 1fr);
+        width: 500px;
+    }
 }
