--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -37,3 +37,20 @@
 .trend{
     margin: 10px 0 70px 0;
 }
+
+@media (max-width: 1000px){
+    /* product */
+    .product{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    /* productBody */
+    .productBody{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 500px;
+    }
+}
