'ProductDescription' is properly vertically centered

--- a/src/Components/ProductDescription/ProductDescription.module.css
+++ b/src/Components/ProductDescription/ProductDescription.module.css
@@ -1,7 +1,9 @@
 /* productDescription */
 .description{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 40%;
-    margin-top: 10%;
 }
 
 .description p{
