--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -8,7 +8,7 @@
 .productBody{
     display: flex;
     justify-content: space-between;
-    height: 80vh;
+    height: 630px;
 }
 
 /* detailsSection */
