--- a/src/Components/ImageSelector/ImageSelector.module.css
+++ b/src/Components/ImageSelector/ImageSelector.module.css
@@ -30,3 +30,25 @@
     margin: 0 10px;
     padding: 15px;
 }
+
+@media (max-width: 1000px){
+    /* productImages */
+    .productImages{
+        width: 100%;
+        height: 410px;
+    }
+
+    /* image */
+    .image{
+        padding: 0;
+    }
+
+    /* imageSelector */
+    .imageSelector{
+        margin-top: 5px;
+    }
+
+    .imageSelector img{
+        padding: 0;
+    }
+}
