--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -54,6 +54,7 @@
         width: 500px;
     }
 
+    /* detailsSection */
     .detailsSection{
         width: 500px;
         grid-template-columns: repeat(2, 1fr);
