--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -16,7 +16,7 @@
     flex-direction: column;
     position: relative;
     float: right;
-    width: 30%;
+    width: 500px;
     height: 100%;
     background-color: white;
     border-left: 1px solid black;
