--- a/src/Components/ProductDescription/ProductDescription.module.css
+++ b/src/Components/ProductDescription/ProductDescription.module.css
@@ -59,3 +59,10 @@
         margin-bottom: 15px;
     }
 }
+
+@media (max-width: 500px){
+    .productPrice{
+        display: grid;
+        grid-template-columns: 100px 100px;
+    }
+}
