buttons in 'ProductDescription' adapt below 500px

--- a/src/Components/ProductDescription/ProductDescription.module.css
+++ b/src/Components/ProductDescription/ProductDescription.module.css
@@ -65,4 +65,16 @@
         display: grid;
         grid-template-columns: 100px 100px;
     }
+
+    .productButtons{
+        flex-direction: column;
+    }
+
+    .productButtons button{
+        width: 100%;
+    }
+
+    .redButton{
+        margin-top: 10px;
+    }
 }
