details section in 'Product' adapts below 500px

--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -64,4 +64,9 @@
     .productBody{
         width: 200px;
     }
+
+    .detailsSection{
+        justify-content: center;
+        grid-template-columns: 200px;
+    }
 }
