--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -42,3 +42,17 @@ nav{
         padding: 0 10px;
     }
 }
+
+@media (max-width:310px) {
+    .navContainer{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navButtons{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        margin: 0 0 5px 0;
+    }
+}
