--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -2,6 +2,7 @@ nav{
     position: sticky;
     z-index: 1;
     top: 0;
+    transition: top 0.3s;
 }
 
 /* navContainer */
@@ -54,5 +55,16 @@ nav{
         justify-content: space-between;
         width: 100%;
         margin: 0 0 5px 0;
+    }
+}
+
+@media (max-width:260px) {
+    .navButtons{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navButtons a{
+        margin: 0;
     }
 }
