fixed 'Separator' width bug

--- a/src/Components/Separator/Separator.module.css
+++ b/src/Components/Separator/Separator.module.css
@@ -115,8 +115,9 @@
     }
     /* textContainer */
     .textContainer{
-        margin-top: 0;
         justify-content: center;
+        width: 200px;
+        margin-top: 0;
     }
 
     /* textBody */
