--- a/src/Pages/Categories/Categories.module.css
+++ b/src/Pages/Categories/Categories.module.css
@@ -64,3 +64,11 @@
         width: 500px;
     }
 }
+
+@media (max-width: 500px){
+    /* categoriesProducts */
+    .categoriesProducts{
+        grid-template-columns: 200px;
+        width: 200px;
+    }
+}
