--- a/src/Components/CartItem/CartItem.module.css
+++ b/src/Components/CartItem/CartItem.module.css
@@ -20,10 +20,12 @@
 
 /* itemDetails */
 .itemDetails{
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 325px;
+    width: 100%;
+    height: 100%;
     padding: 15px;
 }
 
@@ -45,4 +47,29 @@
 
 .detailsQuantity button{
     height: 25px;
+}
+
+@media (max-width: 500px) {
+    /* item */
+    .item{
+        flex-direction: column;
+        height: 300px;
+    }
+
+    /* itemImage */
+    .itemImage{
+        width: 100%;
+        border-right: 0;
+        border-bottom: var(--border-gray);
+    }
+
+    /* detailsHeader */
+    .detailsHeader{
+        flex-direction: column;
+    }
+
+    .detailsHeader h3{
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
