--- a/src/Components/Separator/Separator.module.css
+++ b/src/Components/Separator/Separator.module.css
@@ -80,7 +80,7 @@
     /* separatorImage */
     .separatorImage{
         margin: auto;
-        width: 520px;
+        max-width: 520px;
         height: 50%;
     }
 
@@ -109,9 +109,9 @@
     }
 
     .separatorImage img{
-        max-width: none;
-        width: 350px;
+        max-width: 500px;
         height: 175px;
+        object-fit: cover;
     }
     /* textContainer */
     .textContainer{
