--- a/src/Components/Pagination/Pagination.module.css
+++ b/src/Components/Pagination/Pagination.module.css
@@ -9,6 +9,7 @@
     grid-template-columns: repeat(4, 1fr);
     column-gap: 20px;
     row-gap: 10px;
+    width: 944px;
     margin-bottom: 25px;
 }
 
