--- a/src/Components/Spinner/Spinner.module.css
+++ b/src/Components/Spinner/Spinner.module.css
@@ -1,6 +1,7 @@
 .spinner {
     border: 4px solid rgba(0, 0, 0, .1);
     border-left-color: transparent;
+    border-radius: 50%;
     width: 36px;
     height: 36px;
     
