--- a/src/Pages/Categories/Categories.module.css
+++ b/src/Pages/Categories/Categories.module.css
@@ -13,3 +13,27 @@
     justify-content: center;
 }
 
+.loadingItems{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 20px;
+    row-gap: 10px;
+    width: 944px;
+    margin-bottom: 25px;
+}
+
+@media (max-width: 1000px){
+    /* loadingItems */
+    .loadingItems{
+        grid-template-columns: repeat(2, 1fr);
+        width: 500px;
+    }
+}
+
+@media (max-width: 500px){
+    /* loadingItems */
+    .loadingItems{
+        grid-template-columns: 200px;
+        width: 200px;
+    }
+}
