--- a/src/Components/LoadingProduct/LoadingProduct.module.css
+++ b/src/Components/LoadingProduct/LoadingProduct.module.css
@@ -46,6 +46,7 @@
 }
 
 @media (max-width:1000px) {
+    /* loadingBody */
     .loadingBody{
         flex-direction: column;
         justify-content: center;
@@ -54,13 +55,15 @@
         gap: 10px;
 
     }
-
+    
+    /* element */
     .element{
         width: 250px;
         height: 250px;
         max-width: 1000px;
     }
 
+    /* details */
     .details{
         grid-template-columns: 200px;
         grid-template-rows: repeat(3, auto);
@@ -70,6 +73,7 @@
         align-items: center;
     }
 
+    /* detail */
     .detail{
         height: 100px;
     }
