'Cart' now has a placeholder while loading

--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -99,6 +99,14 @@
     background-color: var(--white-active);
 }
 
+.loading{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
 
 @media (max-width: 500px) {
     /* cartContent */
