--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+h1,h2,h3,h4,a,button,p{
+  font-family: 'Albert Sans', sans-serif;
 }
 
 
