centered the buttons in 'Nav'

--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -21,6 +21,9 @@ nav{
 
 /* navButtons */
 .navButtons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     margin-top: 15px;
 }
 
