--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -1,6 +1,7 @@
 /* cartButton */
 .cartButton{
-    width: 40px;
+    width: 45px;
+    height: 30px;
     background-color: white;
     border: 0;
 }
