--- a/src/Components/ProductCarousel/ProductCarousel.module.css
+++ b/src/Components/ProductCarousel/ProductCarousel.module.css
@@ -46,7 +46,9 @@
 .trendBody{
     width: 1000px;
     height: 310px;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
 }
 
 /* trendItems */
