now theres space within 'HomeHeader' and the first 'Separator'

--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -2,6 +2,7 @@
 .homeHeader{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     height: 100vh;
     max-height: 800px;
