now the 'ProductCarousel' of 'Home' its in a 100vh container

--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -8,8 +8,10 @@
     max-height: 800px;
 }
 
-@media (max-width: 500px){
-    .homeHeader{
-        height: 400px;
-    }
+/* productCarousel */
+.productCarousel{
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    max-height: 800px;
 }
