now the body of 'Categories' its in a 100vh container

--- a/src/Pages/Categories/Categories.module.css
+++ b/src/Pages/Categories/Categories.module.css
@@ -2,8 +2,10 @@
 .categoriesBody{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    height: 100vh;
+    max-height: 1000px;
 }
 
 
