--- a/src/Components/Separator/Separator.module.css
+++ b/src/Components/Separator/Separator.module.css
@@ -15,9 +15,8 @@
 
 /* separatorImage */
 .separatorImage{
-    width: 50%;
+    width: 500px;
     height: 250px;
-    object-fit: fill;
 }
 
 .separatorImage img{
