--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   min-height: 100vh;
   width: 100%;
   margin: 0;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
