--- a/src/Components/Separator/Separator.module.css
+++ b/src/Components/Separator/Separator.module.css
@@ -2,7 +2,6 @@
 .separatorBody{
     display: flex;
     height: 250px;
-    margin: 25px 0;
 }
 
 /* bodyReverse */
@@ -10,7 +9,6 @@
     display: flex;
     flex-direction: row-reverse;
     height: 250px;
-    margin: 25px 0;
 }
 
 /* separatorImage */
@@ -87,8 +85,10 @@
 
     /* textContainer */
     .textContainer{
+        box-sizing: border-box;
         justify-content: start;
         width: 520px;
+        padding: 0 20px;
     }
     
     /* textBody */
