--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -16,6 +16,7 @@ section{
 /* productCarousel */
 .productCarousel{
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
