--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -1,3 +1,9 @@
+/* productSection */
+.productSection{
+    height: 100vh;
+    max-height: 800px;
+}
+
 /* productTitle */
 .productTitle{
     display: flex;
@@ -11,8 +17,8 @@
     height: 630px;
 }
 
-/* detailsSection */
-.detailsSection{
+/* detailsWrapper */
+.detailsWrapper{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
@@ -53,8 +59,8 @@
         width: 500px;
     }
 
-    /* detailsSection */
-    .detailsSection{
+    /* detailsWrapper */
+    .detailsWrapper{
         width: 500px;
         grid-template-columns: repeat(2, 1fr);
     }
@@ -65,7 +71,7 @@
         width: 200px;
     }
 
-    .detailsSection{
+    .detailsWrapper{
         justify-content: center;
         grid-template-columns: 200px;
         width: 100%;
