--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+section{
+  height: 80vh;
+  max-height: 650px;
+}
+
 h1,h2,h3,h4,a,button,p{
   font-family: 'Albert Sans', sans-serif;
 }
