--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -1,5 +1,7 @@
 nav{
     position: sticky;
+    display: flex;
+    justify-content: center;
     z-index: 1;
     top: 0;
     transition: top 0.3s;
@@ -9,7 +11,6 @@ nav{
 .navContainer{
     display: flex;
     justify-content: space-between;
-    margin: auto;
     width: 1000px;
     background-color: white;
 }
