--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -12,6 +12,7 @@ nav{
     display: flex;
     justify-content: space-between;
     width: 1000px;
+    padding: 5px 0;
     background-color: white;
 }
 
@@ -45,7 +46,7 @@ nav{
     .navContainer{
         box-sizing: border-box;
         width: 100%;
-        padding: 0 10px;
+        padding: 5px 10px;
     }
 }
 
