--- a/src/Components/ImageSelector/ImageSelector.module.css
+++ b/src/Components/ImageSelector/ImageSelector.module.css
@@ -1,19 +1,23 @@
 /* productImages */
 .productImages{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     width: 55%;
 }
 
 /* image */
 .image{
+    box-sizing: border-box;
     display: flex;
     justify-content: center;
-    align-content: center;
-    box-sizing: border-box;
-    height: 80%;
-    width: 100%;
-    padding: 100px 100px 50px 100px;
+    align-items: center;
+    padding: 20px;
+    max-width: 80%;
+    min-height: 80%;
+    max-height: 80%;
+
 }
 
 /* imageSelector */
