--- a/src/Components/ImageSelector/ImageSelector.module.css
+++ b/src/Components/ImageSelector/ImageSelector.module.css
@@ -23,16 +23,18 @@
 /* imageSelector */
 .imageSelector{
     display: flex;
+    justify-content:space-evenly;
     width: 100%;
     height: 20%;
-    justify-content: center;
 }
 
-.imageSelector img{
+/* selection */
+.selection{
+    display: flex;
+    align-items: center;
     cursor: pointer;
-    width: 100px;
-    margin: 0 10px;
-    padding: 15px;
+    width: 125px;
+    
 }
 
 @media (max-width: 1000px){
