--- a/src/Pages/Categories/Categories.module.css
+++ b/src/Pages/Categories/Categories.module.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
-    max-height: 1000px;
+    min-height: 100vh;
+    /*max-height: 1000px;*/
 }
 
 
