--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,12 @@
 }
 
 body {
-  position: absolute;
+  position: relative;
   min-height: 100vh;
   width: 100%;
   margin: 0;
   overflow-x: hidden;
+  overflow-y:visible;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
