--- a/src/Components/ProductCarousel/ProductCarousel.module.css
+++ b/src/Components/ProductCarousel/ProductCarousel.module.css
@@ -18,26 +18,32 @@
     float: left;
 }
 
-/* headerButtons */
-.headerButtons{
+/* trendWrapper */
+.trendWrapper{
     display: flex;
+    flex-direction: row;
     align-items: center;
-    width: 80px;
 }
 
-
-.headerButtons button{
+/* trendButtons */
+.trendButtons{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80px;
-    margin-right: 5px;
+    width: 50px;
+    height: 50px;
     color: black;
     background-color: white;
+    border-radius: 50%;
     border: 1px solid black;
+    transform: translate(30px);
+    z-index: 5;
+}
+.trendButtons:last-child{
+    transform: translate(-30px);
 }
 
-.headerButtons button:hover{
+.trendButtons:hover{
     cursor: pointer;
     background-color: var(--white-hover);
 }
@@ -47,8 +53,8 @@
     width: 1000px;
     height: 310px;
     overflow-y: hidden;
-    overflow-x: scroll;
-    padding: 20px;
+    overflow-x: hidden;
+    padding:20px 20px 20px 0px;
 }
 
 /* trendItems */
